<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CDBC741D"
    android:backgroundTint="#BAA870"
    android:backgroundTintMode="src_over"
    android:foregroundGravity="left|center_vertical|center|right|center_horizontal"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColorLink="#221313"
        android:textSize="36sp"
        android:textStyle="bold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="377dp"
        android:layout_height="153dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/image"
            android:foregroundGravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/resistor" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="29dp"
            android:layout_height="93dp"
            android:layout_marginStart="109dp"
            android:entries="@array/color"
            android:padding="16dp"
            android:scrollbarSize="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/image"
            app:layout_constraintStart_toStartOf="@+id/image"
            app:layout_constraintTop_toTopOf="@+id/image"
            app:layout_constraintVertical_bias="0.508" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="29dp"
            android:layout_height="93dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:entries="@array/color"
            android:padding="16dp"
            android:scrollbarSize="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/image"
            app:layout_constraintStart_toEndOf="@+id/spinner"
            app:layout_constraintTop_toTopOf="@+id/image"
            app:layout_constraintVertical_bias="0.508" />

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="29dp"
            android:layout_height="93dp"
            android:layout_marginStart="9dp"
            android:entries="@array/color"
            android:padding="16dp"
            android:scrollbarSize="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/image"
            app:layout_constraintStart_toEndOf="@+id/spinner2"
            app:layout_constraintTop_toTopOf="@+id/image"
            app:layout_constraintVertical_bias="0.508" />

        <Spinner
            android:id="@+id/spinner4"
            android:layout_width="29dp"
            android:layout_height="93dp"
            android:layout_marginStart="20dp"
            android:entries="@array/tolerancia"
            app:layout_constraintBottom_toBottomOf="@+id/image"
            app:layout_constraintStart_toEndOf="@+id/spinner3"
            app:layout_constraintTop_toTopOf="@+id/image"
            app:layout_constraintVertical_bias="0.508" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/resultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/resultado"
        android:padding="16dp"
        android:text="@string/Value"
        android:textAlignment="center"
        android:textColorLink="#1C0F0F"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:text="@string/Calc"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:cornerRadius="15dp"
        app:icon="@drawable/ic_baseline_check_circle_24" />

</LinearLayout>